Add initial code for Module blocks (not hugely tested)